RESOLVED FIXED210191
[iOS] Unable to select text by tap-hold or double tap-hold when allowsLinkPreview property is set to NO
https://bugs.webkit.org/show_bug.cgi?id=210191
Summary [iOS] Unable to select text by tap-hold or double tap-hold when allowsLinkPre...
Mohan
Reported 2020-04-08 09:48:20 PDT
Created attachment 395822 [details] Sample Project Unable to select text rendered in WKWebView when allowsLinkPreview property of WKWebView is set to NO. allowsLinkPreview - As per documentation this property is supposed to control the behavior of long tap on link but this somehow affects text selection. Issue is observed only in iPad and recent iOS 13 versions. Sample project attached was tested on 13.4.5
Attachments
Sample Project (46.59 KB, application/zip)
2020-04-08 09:48 PDT, Mohan
no flags
Patch (8.88 KB, patch)
2020-04-10 11:38 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-08 16:49:59 PDT
Wenson Hsieh
Comment 2 2020-04-08 16:58:09 PDT
I’ve been investigating this bug here: <rdar://problem/60454016>
Wenson Hsieh
Comment 3 2020-04-10 10:28:25 PDT
Note that the inability to select text using “double tap-hold” (i.e. the tap-and-half gesture) isn’t actually a new problem, but I think I can just fix both in this patch.
Wenson Hsieh
Comment 4 2020-04-10 11:38:22 PDT
EWS
Comment 5 2020-04-10 13:02:24 PDT
Committed r259892: <https://trac.webkit.org/changeset/259892> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396109 [details].
Wenson Hsieh
Comment 6 2020-05-25 14:40:19 PDT
*** Bug 212299 has been marked as a duplicate of this bug. ***
Roman K
Comment 7 2020-06-02 01:19:25 PDT
still reproducible on iOS 13.5.1 can you clarify on which iOS this fix will land?
Tim Horton
Comment 8 2020-06-02 02:12:47 PDT
(In reply to Roman K from comment #7) > still reproducible on iOS 13.5.1 > can you clarify on which iOS this fix will land? Apple doesn't comment on the content or timing of future software updates.
Brent Fulgham
Comment 9 2022-02-12 21:00:14 PST
*** Bug 213247 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.